<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.AppCompat.Light"
    android:background="@android:color/black"
    tools:context="com.example.michaelpollard.cannonblast.LevelActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="50dp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:layout_above="@+id/button1"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level1"
        android:layout_weight="1"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level2"
        android:layout_above="@+id/button3"
        android:layout_weight="1"

        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level3"
        android:layout_above="@+id/button4"
        android:layout_weight="1"

        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level4"
        android:layout_above="@+id/button5"
        android:layout_weight="1"

        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level5"
        android:layout_above="@+id/highScoreButton"
        android:layout_weight="1"

        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/highScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"

        android:layout_centerHorizontal="true"/>

</RelativeLayout>
